--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,9 @@
 
 </body>
     <footer>
+      <img src="https://maui.hawaii.edu/wp-content/uploads/2021/02/official-seal.jpg" alt="logo" width=610 height=394>
     Copyright &#169; UHMC 2020
     </footer>
 </html>
+      Insert the UHMC logo URL in the footer view, with width = 610 px, height = 394 px, alt =
+“logo” - https://maui.hawaii.edu/wp-content/uploads/2021/02/official-seal.jpg
